--- a/css/messages.css
+++ b/css/messages.css
@@ -9,3 +9,35 @@ body, html {
 .message{
     border: 1px solid whitesmoke;
 }
+
+.message {
+    font-size: 0.8em;
+    border: 1px solid whitesmoke;
+    margin: 0.5em 1em;
+    padding: 0.5em;
+    border-radius: 5px;
+}
+
+.message-info {
+    background-color: #c3d6f9;
+    color: #4b3fa5;
+
+}
+
+.message-success {
+    background-color: #c6f5d8;
+    color: #007334;
+
+}
+
+.message-warning {
+    background-color: #fcfcc3;
+    color: #9b8600;
+
+}
+
+.message-error {
+    background-color: #ff9389;
+    color: #ff395a;;
+
+}
