--- a/css/twitter.css
+++ b/css/twitter.css
@@ -27,10 +27,11 @@ a {
 }
 .top-nav {
     background: var(--light-bg);
+    width: 100%;
 }
 .nav {
     list-style-type: none;
-    padding: 0;
+    padding: 1.5em;
     margin: 0;
 }
 .nav-link {
@@ -43,6 +44,9 @@ a {
 }
 .profile {
     background: var(--light-bg);
+    height: 80px;
+    float: left;
+    line-height: 80px;
 }
 .btn {
     border: 1px solid var(--main-link-color);
