--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -20,6 +20,8 @@ a {
     max-width: 750px;
     margin: 0 auto;
     /* TODO: Make this a flex container and align it's items to the center*/
+    display: flex;
+    align-items: center;
 }
 
 .card {
